# action-python-security-auditing

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  integration-tests.yml  release-please.yml  scorecard.yml
integration-tests/: expected_results.yml  validate_results.py
integration-tests/cases/08-poetry-src-both/: pyproject.toml
integration-tests/cases/11-requirements-root/: osv-scanner.toml
integration-tests/tests/: conftest.py  test_validate_results.py
src/python_security_auditing/: __main__.py  annotations.py  pr_comment.py  report.py  runners.py  settings.py
tests/: test_annotations.py  test_main.py  test_pr_comment.py  test_runners.py  test_settings.py
