[tool.poetry]
name = "poetry-src-both"
version = "0.1.0"
description = "Poetry project with bandit issues and vulnerable deps"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
cryptography = "46.0.6"
requests = "2.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
